# TicTacToeV3

Client/: CMakeLists.txt  game.cpp  game.h  main.cpp  pages.cpp  pages.h
Client/Installer/: Installer.vdproj
Client/Installer/Debug/: Installer.msi
Client/TicTacToeInstaller/Debug/: TicTacToe.msi
Client/game/: game.cpp  game.h  network.cpp  network.h
Client/gui/: button.cpp  button.h  gui.cpp  gui.h
Server/: CMakeLists.txt  main.cpp
Server/src/: main.cpp
